# Research

./: .gitignore  CMakeLists.txt  CMakePresets.json  research_renderer.py  vcpkg-configuration.json  vcpkg.json  vcpkg.lock.txt
assets/shaders/include/: BRDF.slang  BindlessHeap.slang  Common.slang  GpuScene.slang  GuidingGrid.slang  RayPayload.slang  Sampling.slang
assets/shaders/passes/accumulate/: accumulate.slang
assets/shaders/passes/denoise/: atrous.slang
assets/shaders/passes/gbuffer/: gbuffer.slang
assets/shaders/passes/pathtracer_reference/: pathtracer.slang
assets/shaders/passes/restir_di/: restir_di.slang
assets/shaders/passes/restir_gi/: restir_gi.slang
assets/shaders/passes/restir_pt/: restir_pt.slang
assets/shaders/passes/tonemap/: tonemap.slang
python/examples/: _bootstrap.py  cornell_smoke.py  run_pt.py
src/: CMakeLists.txt  main.cpp
src/app/: Application.cpp  Application.h  EditorUI.cpp  EditorUI.h
src/core/: FileWatcher.cpp  FileWatcher.h  Log.cpp  Log.h
src/passes/accumulate/: AccumulatePass.cpp  AccumulatePass.h
src/passes/denoise/: AtrousPass.cpp  AtrousPass.h
src/passes/gbuffer/: GBufferPass.cpp  GBufferPass.h
src/passes/imgui/: ImGuiPass.cpp  ImGuiPass.h
src/passes/pathtracer_reference/: PathTracerPass.cpp  PathTracerPass.h
src/passes/restir_di/: ReSTIRDIPass.cpp  ReSTIRDIPass.h
src/passes/restir_gi/: ReSTIRGIPass.cpp  ReSTIRGIPass.h
src/passes/restir_pt/: ReSTIRPTPass.cpp  ReSTIRPTPass.h
src/passes/tonemap/: TonemapPass.cpp  TonemapPass.h
src/python/: bindings.cpp
src/render/: FrameContext.h  RenderGraph.cpp  RenderGraph.h  RenderPass.h  Renderer.cpp  Renderer.h
src/rhi/: AccelStructure.cpp  AccelStructure.h  Barrier.h  BindlessRegistry.cpp  BindlessRegistry.h  Buffer.cpp  Buffer.h  CommandBuffer.cpp  CommandBuffer.h  CommandRecorder.cpp  CommandRecorder.h  Device.cpp  Device.h  Frame.cpp  Frame.h  Handles.h  Image.cpp  Image.h  Pipeline.cpp  Pipeline.h  Platform.h  PlatformInternal.h  PlatformVulkan.cpp  Readback.cpp  Readback.h  Rendering.h  Sampler.cpp  Sampler.h  SamplerDesc.h  Surface.cpp  Surface.h  Swapchain.cpp  Swapchain.h  Types.h  VulkanTypeCasts.h  vma_impl.cpp
src/rhi/internal/: VulkanAccess.h  VulkanTypeCasts.h
src/scene/: Camera.cpp  Camera.h  GltfLoader.cpp  GltfLoader.h  GpuScene.h  Scene.cpp  Scene.h
src/shader/: HotReload.cpp  HotReload.h  ShaderModule.cpp  ShaderModule.h  ShaderReflection.cpp  ShaderReflection.h  SlangSession.cpp  SlangSession.h
tools/: install-python-deps.ps1  python-requirements.txt  regen-vcpkg-lock.ps1
